--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Practica de Fetch" />
     <title>Ejercicio Fetch</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href=".\layout\favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" type="module" defer></script>
 </head>
 
 <body>
-
+    <div>
+        <img src="./layout/icon-star.svg" alt="imagen de una estrella">
+        <h1>¿Cómo lo hicimos?</h1>
+        <section>
+            <p>Por favor, haznos saber cómo lo hicimos con tu solicitud de soporte.</p>
+            <p>Todos los comentarios son bienvenidos para ayudarnos a mejorar nuestra oferta!</p>
+        </section>
+        <form>
+            <input type="radio">
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
 </body>
 
 </html>
