--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
             <p>Todos los comentarios son bienvenidos para ayudarnos a mejorar nuestra oferta!</p>
         </section>
         <form>
-            <input type="radio">
+            <fieldset>
+
+                <input type="radio" id="one" name="assessment" value="1" />
+                <label for="one">1</label>
+
+                <input type="radio" id="two" name="assessment" value="2" />
+                <label for="two">2</label>
+
+                <input type="radio" id="three" name="assessment" value="3" />
+                <label for="three">3</label>
+
+                <input type="radio" id="four" name="assessment" value="4" />
+                <label for="four">4</label>
+
+                <input type="radio" id="five" name="assessment" value="5" />
+                <label for="five">5</label>
+
+            </fieldset>
             <input type="submit" value="Enviar">
         </form>
     </div>
