--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Practica de Fetch" />
-    <title>Ejercicio Fetch</title>
+    <meta name="description" content="Práctica Modulo 1-Challenge1" />
+    <title>"Práctica Modulo 1-Challenge1"</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href=".\layout\favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" type="module" defer></script>
