--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </head>
 
 <body>
-    <div>
-        <img src="./layout/icon-star.svg" alt="imagen de una estrella">
-        <h1>¿Cómo lo hicimos?</h1>
+    <div class="card">
+        <div class="image-container">
+            <img src="./layout/icon-star.svg" alt="imagen de una estrella">
+        </div>
+        <h2>¿Cómo lo hicimos?</h2>
         <section>
             <p>Por favor, haznos saber cómo lo hicimos con tu solicitud de soporte.</p>
             <p>Todos los comentarios son bienvenidos para ayudarnos a mejorar nuestra oferta!</p>
