--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 
 <body>
     <div class="card">
+
         <div class="image-container">
             <img src="./layout/icon-star.svg" alt="imagen de una estrella">
         </div>
+
+
         <h2>¿Cómo lo hicimos?</h2>
         <section>
             <p>Por favor, haznos saber cómo lo hicimos con tu solicitud de soporte.</p>
@@ -44,7 +47,7 @@
                 <label for="five">5</label>
 
             </fieldset>
-            <input type="submit" value="Enviar">
+            <input class="button" type="submit" value="Enviar">
         </form>
     </div>
 </body>
