Active required in form

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
             </section>
             <form>
                 <fieldset>
-                    <input type="radio" id="one" name="assessment" value="1" />
+                    <input
+                        type="radio"
+                        id="one"
+                        name="assessment"
+                        value="1"
+                        required
+                    />
                     <label for="one">1</label>
 
                     <input type="radio" id="two" name="assessment" value="2" />
